# gti-example-clients

./: README.md
java/: README.md  build.gradle
java/gradle/: libs.versions.toml
java/src/main/java/de/hbt/gti/exampleclient/: ApiClientService.java  CheckNameService.java  ExampleClientApplication.java  GetRouteService.java  InitService.java
php/: README.md  composer.json  docker-compose.yaml  run.sh
php/nginx/: Dockerfile
php/php/: Dockerfile
php/src/: GtiClient.php  index.php
python/: README.md  client.py  pyproject.toml
