[tool.poetry]
name = "gticlient"
version = "0.1.0"
description = "A minimal working example to send requests to the GTI API"
authors = ["Jim Martens <jma@hbt.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
